# telegram-bot-service

./: .env.example  .pre-commit-config.yaml  Dockerfile  pyproject.toml
locale/en/LC_MESSAGES/: messages.po
locale/uk/LC_MESSAGES/: messages.po
telegram_bot_service/: __init__.py  admin.py  config.py  language.py  payment.py  routes.py  telegram.py  training_plan.py  types.py  user.py
telegram_bot_service/handlers/: __init__.py  admin.py  constants.py  equipment_shop.py  error_handler.py  helpers.py  main_menu.py  music_playlists.py  social_networks.py  training_plan.py
telegram_bot_service/training_plan/: __init__.py  filters.py
