[tool.poetry]
name = "telegram-bot-service"
version = "0.1.0"
description = ""
authors = ["Andrew Yatsura <andrewyazura203@gmail.com>"]
readme = "README.md"
packages = [{include = "telegram_bot_service"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.95.0"
uvicorn = {extras = ["standard"], version = "^0.21.1"}
python-telegram-bot = "^20.2"
redis = {extras = ["hiredis"], version = "^4.5.4"}


[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
pre-commit = "^3.2.2"
ruff = "^0.0.265"
pyright = "^1.1.306"


[tool.poetry.group.prod.dependencies]
gunicorn = "^20.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
skip_magic_trailing_comma = true

[tool.pyright]
typeCheckingMode = "strict"
reportInvalidTypeVarUse = false
